# cookiecutter-ml-course

./: LICENSE  Makefile  README.md  pyproject.toml  setup.py
data/processed/: dv.pkl  test.pkl  train.pkl  val.pkl
data/raw/: green_tripdata_2023-10.parquet  green_tripdata_2023-11.parquet  green_tripdata_2023-12.parquet
docs/: MLflow_Assignment.md  Makefile  conf.py  index.rst  make.bat
notebooks/: 01-intro-clean-notebook.ipynb  01_intro.ipynb  01_intro_clean_notebook.ipynb  02_mlflow_examples.ipynb  02_mlflow_training_notebook.ipynb  03_mlflow_prediction_notebook.ipynb  04_deploy_model.ipynb
src/taxi_ride/data/: preprocess_data.py
src/taxi_ride/models/: deploy_model.py  gradio_app.py  predict_model.py  train_model.py
src/taxi_ride/visualization/: visualize.py
