[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutter-data-science"
version = "0.1.0"
description = "A standardized project structure for doing and sharing data science work."
authors = [{ name = "Lisana Berberi", email = "lisana.berberi@kit.edu" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "click",
  "cookiecutter",
  "tomlkit",
  "mlflow==2.17.0",
  "cloudpickle==3.1.0",
  "matplotlib==3.9.2",
  "numpy==1.26.4",
  "pandas==2.2.3",
]


[tool.setuptools.packages.find]
where =["src"]
include = ["taxi-ride*"]