[build-system]
requires = ["setuptools>=72.0"]
build-backend = "setuptools.build_meta"

[project]
name = "cookiecutter-data-science"
version = "0.1.0"
description = "A standardized project structure for doing and sharing data science work."
authors = [{ name = "Lisana Berberi", email = "lisana.berberi@kit.edu" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "click",
  "cookiecutter",
  "tomlkit",
  "mlflow==3.5.0",
  "cloudpickle==3.1.0",
  "matplotlib==3.9.2",
  "numpy==1.26.4",
  "pandas==2.2.3",
]

[tool.project_paths]
repo_root = "."                # relative path to the repo root
raw_data = "data/raw"          # relative to repo root
processed_data = "data/processed"

[project.optional-dependencies]
dev = ["ipykernel>=6.29.5, <7",
       "pip>=24.2",
       "pre-commit>=4.1.0, <5"]

[tool.setuptools.packages.find]
where =["src"]
include = ["taxi_ride*"]

[project.scripts]
preprocess-data = "taxi_ride.data.preprocess_data:main"